Corrected 'align-content' to 'flex-line-pack' for IE10

--- a/test/cases/flex.styl
+++ b/test/cases/flex.styl
@@ -26,6 +26,13 @@ align-items
   align-items flex-end
   align-items center
 
+align-content
+  align-content flex-start
+  align-content flex-end
+  align-content center
+  align-content space-between
+  align-content space-around
+
 flex
   flex 0 auto
   flex auto 0
